--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,18 +7,18 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/redis?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: 1227
+    password: root
   redis:
     host: 127.0.0.1
     port: 6379
-    lettuce:
-      pool:
-        max-active: 10
-        max-idle: 10
-        min-idle: 1
-        time-between-eviction-runs: 10s
+    password: 123456
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: admin
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
